# gauges_QT

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  Doxyfile  ProjectOptions.cmake  knowledge.md  knowledge.txt  workflow.md
cmake/: Cache.cmake  CompilerWarnings.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  Tests.cmake  clang-format.cmake
ej_2/src/: ej_2.cpp
ej_3/src/: ej_3.cpp
gauges/: CMakeLists.txt
gauges/src/: app_state.h  detection.cpp  detection.h  gauge_detector.cpp  gauge_detector.h  gauge_reader.cpp  main.cpp  shared_state.h  worker.cpp
inc/: calibration_page.h  circular_gauge.h  detection_page.h  edgewise_gauge.h  gauge.h  gauge_section_helper.h  main_window.h  processing_page.h  q_collapsible_section.h  video_widget.h  worker.h
src/: CMakeLists.txt  Section.cpp  app_state.h  calibration_page.cpp  calibration_page.h  circular_gauge.cpp  circular_gauge.h  detection_page.cpp  detection_page.h  edgewise_gauge.cpp  gauge.cpp  gauge_detector.cpp  gauge_detector.h  gauge_section_helper.h  main.cpp  main_window.cpp  main_window.h  ownership_lifecycle_report.json  processing_page.cpp  processing_page.h  q_collapsible_section.cpp  q_collapsible_section.h  section.cpp  section.h  shared_state.h  video_widget.cpp  worker.cpp  worker.h
